# SegB

./: .gitignore  LICENSE  README.md  pyproject.toml
.docker/: Dockerfile  Dockerfile.trainer  docker-compose.yaml  package_versions.txt
docs/: USER_MANUAL.md
src/: app.py  honey_segmentation_model.py  model_manager.py  pending_requests.py  user_config.py
