[tool.poetry]
name = "telegram-bot-project"
version = "0.1.0"
description = "A Telegram bot for honey image segmentation"
authors = ["Sergio Geninatti <sergiogeninatti@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sergiogeninatti/Digitalbee.git"
homepage = "https://github.com/sergiogeninatti/Digitalbee.git"

[tool.poetry.dependencies]
python = "3.10.12"
python-telegram-bot = "^20.0"
tensorflow = "2.10.0"
opencv-python-headless = "4.10.0.84"
numpy = "1.24.3"
pillow = "^10.2.0"
keras = "2.10.0"
segmentation-models = "1.0.1"
python-dateutil = "^2.8.2"
# Añadir para mejor compatibilidad con segmentation-models
scipy = "1.10.1"
h5py = "3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0"
# Dependencias para entrenamiento y experimentación
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
tensorboard = "2.10.0"
tqdm = "^4.66.0"
pandas = "^2.0.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
# Para debugging y profiling
memory-profiler = "^0.61.0"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Configuración para resolver conflictos de dependencias
[tool.poetry.scripts]
train-model = "train_segmentation_models:main"
train-all = "scripts.train_all:main"